fix(layout): :bug: fix layout issue

--- a/packages/client/src/styles/index.css
+++ b/packages/client/src/styles/index.css
@@ -29,7 +29,6 @@ html {
 
 .container {
   display: flex;
-	flex-direction: column;
   align-items: center;
   justify-content: center;
 	margin: 0;
